# dev-machine-setup

./: Brewfile  CHECKLIST.md  README.md  config.ts  requirements.txt  setup.sh  zshrc_config
helpful_stuff/co-pilot-studio/: catalog_review_project_guide.md  copilot_studio_setup_guide.md
helpful_stuff/content-tagging/: classification_comparison.ipynb  pyproject.toml
helpful_stuff/snowflake/: Learning Resources Priority.md  Package and Venv Installs.md  scikit-to-snowpark-example.md
